--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 :root{
   --green-neon: greenyellow;
   --transition: ease-in-out 0.6s;
+  --scroll-background:#1f1f1f;
+  --scroll-thumb: #0f0f0f;
 }
 
 html{
@@ -27,3 +29,26 @@ code {
     monospace;
 }
 
+body::-webkit-scrollbar{
+  width: 12px;
+}
+
+body::-webkit-scrollbar-thumb{
+  background:var(--scroll-thumb);
+  border: 2px solid var(--scroll-background);
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-track{
+  background:var(--scroll-background);
+}
+
+@media (orientation:portrait){
+  body::-webkit-scrollbar{
+    width: 6px;
+  }
+  body::-webkit-scrollbar-thumb{
+    border: 1px solid var(--scroll-background);
+    border-radius: 5px;
+  }
+}
